--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,8 @@ body {
 .cards-container {
   display: grid;
   width: 100vw;
+  max-width: 1400px;
+  margin: auto;
   justify-content: center;
   justify-items: center;
   grid-gap: 32px;
