--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,13 +14,12 @@ body {
 
 .cards-container {
   display: grid;
-  width: 100vw;
   max-width: 1400px;
   margin: auto;
   justify-content: center;
   justify-items: center;
   grid-gap: 32px;
-  grid-template-columns: repeat(auto-fill, minmax($card-width, 1fr));
+  grid-template-columns: repeat(auto-fill, $card-width);
 }
 
 .card {
